--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="section" id="section-1">
             <div class="texto-section">
                 <h1>O Projeto</h1>
-                <p>Oceans O20 é uma iniciativa inovadora que visa a conscientização e a ação sobre a poluição marinha. Combinando tecnologia e educação, buscamos envolver a comunidade e empresas na preservação dos oceanos. Nosso projeto utiliza sensores de coleta de dados, processamento de informações e visualização interativa para monitorar a saúde dos mares e promover práticas sustentáveis.</p>            
+                <p>Oceans O20 é uma iniciativa inovadora que visa conscientizar e agir contra a poluição marinha. Combinando tecnologia e educação, buscamos envolver a comunidade e as empresas na preservação dos oceanos. Nosso projeto utiliza sensores de coleta de dados, processamento de informações e visualização interativa para monitorar a saúde dos mares e promover práticas sustentáveis.</p>            
             </div>
             <div class="slider">
                 <div class="slides">
@@ -92,7 +92,7 @@
         <div class="section" id="section-4">
             <div class="texto-section"> 
                 <h1>Objetivos</h1>
-                <p>Nossos objetivos incluem aumentar a conscientização sobre a poluição marinha, promover a educação ambiental e incentivar a adoção de práticas sustentáveis por parte de empresas e indivíduos. Pretendemos fornecer dados precisos e acessíveis sobre a saúde dos oceanos, facilitando a tomada de decisões informadas e ações concretas para a preservação dos ecossistemas marinhos.</p>            
+                <p>Nossos principais objetivos são a conscientização sobre a poluição marinha, promover educação ambiental e incentivar a adoção de práticas sustentáveis por parte de empresas e indivíduos. Pretendemos fornecer dados precisos e acessíveis sobre a saúde dos oceanos, facilitando a tomada de decisões das equipes responsáveis pela preservação dos ecossistemas marinhos.</p>            
             </div>
             <img src="img/objetivos.svg" alt="objetivos" class="img-section">
         </div>
